# makemore

./: .gitignore  CMakeLists.txt  README.md  main.cpp
data/: readme.md
include/: functional.h  input.h  models.h  tensor.h
scripts/: build_and_run_debug.sh  build_and_run_release.sh  test.sh
src/: input.cpp
tests/: test_tensor.cpp
